--- a/style/index.css
+++ b/style/index.css
@@ -2,6 +2,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 body {
     background-color: #111111;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 h6 {
@@ -27,8 +29,8 @@ h6 {
 }
 
 .center {
-    height: 100vh;
-    width: 100vh;
+    height: 100%;
+    width: 100%;
     align-items: center;
 }
 
@@ -66,20 +68,27 @@ p {
     align-self: center;
     align-items: center;
     text-align: center;
+    height: 50%;
 }
 
 .embed-title {
     color: aliceblue;
     position: relative;
-    padding-left: 0%;
     padding-top: 2%;
     max-width: 100%;
+    max-height: 50vh;
     text-align: center;
+    margin: auto;
 }
 
 #video {
     width: 100%;
-    height: 50vh;
+    height: 100%;
+    max-width: 800px;
+    max-height: 450px;
+    min-width: 200px;
+    min-height: 50px;
+    margin: auto;
 }
 
 #iframe {
