--- a/style/index.css
+++ b/style/index.css
@@ -88,10 +88,6 @@ h6 {
 #video {
     width: 100%;
     height: 100%;
-    max-width: 800px;
-    max-height: 450px;
-    min-width: 200px;
-    min-height: 50px;
     margin: auto;
 }
 
@@ -175,8 +171,8 @@ h6 {
         font-size: larger;
     }
     #video {
-        max-width: 100%;
-        max-height: 70%;
+        width: 80%;
+        height: 100%;
     }
 }
 
@@ -201,8 +197,8 @@ h6 {
         font-size: larger;
     }
     #video {
-        max-width: 100%;
-        max-height: 70%;
+        max-width: 80%;
+        max-height: 100%;
     }
 }
 
@@ -226,9 +222,13 @@ h6 {
     .embed-title {
         font-size: larger;
     }
+    #embed {
+        max-width: 100%;
+        max-height: 100%;
+    }
     #video {
         max-width: 100%;
-        max-height: 70%;
+        max-height: 100%;
     }
 }
 
@@ -252,8 +252,12 @@ h6 {
     .embed-title {
         font-size: larger;
     }
+    #embed {
+        max-width: 100%;
+        max-height: 100%;
+    }
     #video {
         max-width: 100%;
-        max-height: 70%;
+        max-height: 100%;
     }
 }
